--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -49,13 +49,13 @@
 
 * 1 月 第 1-25 视频学习
 * 2 月 第 26-91 视频学习
-* 3 月
+* 3 月第 92-97 视频学习
 
 ## 1.4. Android
 
 ```java
 4. Android
-书籍：《Android 全埋点解决方案》
+书籍：《Android 全埋点解决方案》- 完成
      《Android 进阶解密》
 ```
 
@@ -65,7 +65,7 @@
 * 1 月 《Android 全埋点解决方案》第 7 章读书笔记
 * 2 月 《Android 全埋点解决方案》第 9-11 章阅读 -- 阅读已完成
 * 2 月 《Android 全埋点解决方案》第 8-10 章读书笔记
-* 3 月
+* 3 月 《Android 全埋点解决方案》第 1-6 章读书笔记
 
 ## 1.5. 编码
 
@@ -92,7 +92,7 @@
 
 * 2 月 《指数基金投资指南》第 1 章
 
-* 3 月
+* 3 月 《指数基金投资指南》第 2- 章
 
   
 
@@ -114,7 +114,7 @@
 
 * 1 月 14 次，健身房 12 次，自行 2 次，健身房 1 月 21 号停操课。
 * 2 月 10 次，健身房 2 次，自行 8 次，健身房 2 月 27 号恢复操课。
-* 3 月
+* 3 月 4 次，健身房 4 次
 * 4 月
 * 5 月
 * 6 月
