代码整洁第12章

--- a/BookNote/代码整洁之道/第12章-迭代.md
+++ b/BookNote/代码整洁之道/第12章-迭代.md
@@ -1,4 +1,78 @@
-# 第 12 章 迭代
+# 第 12 章 迭进
 
-　　代码整洁之道
+## 12.1. 通过迭进设计达到整洁目的
+
+　　Kent Beck 关于简单设计的四条规则，对于创建具有良好设计的软件有着莫大的帮助。
+
+​		据 Kent 所述，只要遵循以下规则，设计就能变得 “ 简单 ”：
+
+* 运行所有测试；
+* 不可重复；
+* 表达了程序员的意图；
+* 尽可能减少类和方法的数量；
+* 以上规则按其重要程序排列。
+
+## 12.2. 简单设计规则 1：运行所有测试
+
+​		只要系统可测试，就会导向保持类短小且目的单一的设计方案。遵循 SRP 的类，测试起来较为简单。测试编写得越多，就越能持续走向编写较易测试的代码。所以，确保系统完全可测试，能帮助我们创建更好的设计。
+
+​		紧耦合的代码难以编写测试。同样，编写测试越多，就越会遵循 DIP 之类规则，使用依赖注入、接口和抽象等工具尽可能减少耦合。如此一来，设计就有长足进步。
+
+​		遵循有关编写测试并持续运行测试的简单、明确的规则，系统就会更贴近 OO 低耦合度、高内聚度的目标。编写测试引致更好的设计。
+
+## 12.3. 简单设计规则 2～4：重构
+
+​		有了测试，就能保持代码和类的整洁，方法就是递增式地重构代码。添加了几行代码后，就要暂停，琢磨一下变化了的设计。设计退步了吗？如果是，就要清理它，并且运行测试，保证没有破坏任何东西。测试消除了对清理代码就会破坏代码的恐惧。
+
+​		在重构过程中，可以应用有关优秀软件设计的一切知识。提升内聚性，降低耦合度，切分关注面，模块化系统性关注面，缩小函数和类的尺寸，选用更好的名称，如此等等。
+
+## 12.4. 不可重复
+
+​		重复是拥有良好设计系统的大敌。它代表着额外的工作、额外的风险和额外且不必要的复杂度。重复有多种表现。极其雷同的代码行当然是重复。类似的代码往往可以调整得更相似，这样就能更容易地进行重构。
+
+​		模版方法模式是一种移除高层级重复的通用技巧。
+
+## 12.5. 表达力
+
+​		软件项目的主要成本在于长期维护。为了在修改时尽量降低出现缺陷的可能性，很有必要理解系统是做什么的。当系统变的越来越复杂，开发者就需要越来越多的时间来理解它，而且极有可能误解。所以，代码应当清晰地表达其作者的意图。作者把代码写得越清晰，其他人花在理解代码上的时间也就越少，从而减少缺陷，缩减维护成本。
+
+​		可以通过选用好名称来表达。我们想要听到好类名和好函数名，而且在查看其权责时不会大吃一惊。
+
+​		也可以通过保持函数和类尺寸短小来表达。短小的类和函数通常易于命名，易于编写，易于理解。
+
+​		还可以通过采用标准命名法来表达。例如，设计模式很大程序上就关乎沟通和表达，通过在实现这些模式的类的名称中采用标准模式名，例如 COMMAND 或 VISITOR，就能充分地向其他开发者描述你的设计。
+
+​		编写良好的单元测试也具有表达性。测试的主要目的之一就是通过实例起到文档的作用，读到测试的人应该能很快理解某个类是做什么的。
+
+​		不过，做到有表达力的最重要方式却是尝试。
+
+## 12.6. 尽可能少的类和方法
+
+​		即便是消除重复、代码表达力和 SRP 等最基础的概念也会被过度使用。为了保持类和函数短小，我们可能会造出太多的细小类和方法。所以这条规则也主张函数和类的数量要少。
+
+​		类和方法的数量太多，有时是由毫无意义的教条主义导致的。例如，某个编码标准就坚称应该为每个类创建接口。也有开发者认为，字段和行为必须切分到数据类和行为类中。应该抵制这类教条，采用更实用的手段。
+
+​		我们的目标是在保持函数和类短小的同时，保持整个系统短小精悍。所以，尽管使类和函数的数量尽量少是很重要的，但更重要的却是测试、消除重复和表达力。
+
+## 12.7. 小结
+
+​		遵循简单设计的实践手段，开发者不必经年学习就能掌握好的原则和模式。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
