--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -49,7 +49,8 @@
 
 * 1 月 第 1-25 视频学习
 * 2 月 第 26-91 视频学习
-* 3 月第 92-97 视频学习
+* 3 月第 92-100 视频学习
+* 
 
 ## 1.4. Android
 
@@ -76,7 +77,7 @@
 
 ### 1.5.1. 实施
 
-
+* 3 月 《代码整洁之道》 第 12 章完成
 
 ## 1.6. 其他
 
@@ -92,7 +93,7 @@
 
 * 2 月 《指数基金投资指南》第 1 章
 
-* 3 月 《指数基金投资指南》第 2- 章
+* 3 月 《指数基金投资指南》第 2- 6 章
 
   
 
@@ -114,7 +115,7 @@
 
 * 1 月 14 次，健身房 12 次，自行 2 次，健身房 1 月 21 号停操课。
 * 2 月 10 次，健身房 2 次，自行 8 次，健身房 2 月 27 号恢复操课。
-* 3 月 4 次，健身房 4 次
+* 3 月 5 次，健身房 5 次
 * 4 月
 * 5 月
 * 6 月
