--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -12,25 +12,26 @@
   * 《深入探索 Android 热修复技术原理》
   * 《 Android 插件化开发指南》
   * 《 Android 开发艺术探索 》
-  * 《React Native 移动开发实战》 - 已完成
-  * 《深入理解 Kotlin 协程》
   * 《Android 全埋点解决方案》 - 已完成
+  * 《重构改善既有代码的设计》豆瓣评分 9.0
 * 其他书籍
   * 《思维导图完整手册》 - 已完成
-  * 《指数基金投资指南》
+  * 《女性呵护指南》豆瓣评分 8.2
 * 技术栈
   * React Native
+    * 书籍：《React Native 移动开发实战》 - 已完成
   * Flutter
   * 组件化
   * 插件化
   * 热修复
   * kotlin
+    * 书籍：《深入理解 Kotlin 协程》
   * UI 设计
   * 架构师
+    * 视频：高焕堂-Android 编程从程序员到架构师的高手之路
   * 音视频
   * python
   * 微信小程序
-* 
 
 # 2. 生活
 
@@ -38,3 +39,5 @@
 * 绘画
 * 练字
 * 英语
+* 理财
+  * 书籍：《指数基金投资指南》 豆瓣评分 8.2
