--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -14,6 +14,7 @@
   * 《 Android 开发艺术探索 》
   * 《Android 全埋点解决方案》 - 已完成
   * 《重构改善既有代码的设计》豆瓣评分 9.0
+  * 《UML 精粹：标准对象建模语言简明指南》 豆瓣评分 8.1
 * 其他书籍
   * 《思维导图完整手册》 - 已完成
   * 《女性呵护指南》豆瓣评分 8.2
@@ -41,3 +42,4 @@
 * 英语
 * 理财
   * 书籍：《指数基金投资指南》 豆瓣评分 8.2
+
