--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -42,15 +42,15 @@
 
 ```java
 3. 架构 
-视频：《高焕堂-Android 编程从程序员到架构师的高手之路》
+视频：《高焕堂-Android 编程从程序员到架构师的高手之路》- 共 234 个视频
 ```
 
 ### 1.3.1. 实施
 
-* 1 月 第 1-25 视频学习
-* 2 月 第 26-91 视频学习
-* 3 月第 92-100 视频学习
-* 
+* 1 月 第 1-25 视频学习，进度完成 10.68%。
+* 2 月 第 26-91 视频学习，进度完成 38.98%。
+* 3 月第 92-110 视频学习，进度完成 47%。
+* 4 月第 
 
 ## 1.4. Android
 
@@ -73,11 +73,13 @@
 ```java
 5. 编码
 书籍：《代码整洁之道》
+     《重构：改善既有代码的设计》
 ```
 
 ### 1.5.1. 实施
 
-* 3 月 《代码整洁之道》 第 12 章完成
+* 3 月 《代码整洁之道》 第 12-14 章完成
+* 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
 
 ## 1.6. 其他
 
@@ -85,6 +87,7 @@
 6. 其他
 书籍：《思维导图完整手册》- 完成
   	 《指数基金投资指南》
+  	 《攻守：可转债投资实用手册》
 ```
 
 ### 1.6.1. 实施
@@ -93,7 +96,7 @@
 
 * 2 月 《指数基金投资指南》第 1 章
 
-* 3 月 《指数基金投资指南》第 2- 6 章
+* 3 月 《指数基金投资指南》第 2- 8 章-阅读完毕
 
   
 
@@ -115,7 +118,7 @@
 
 * 1 月 14 次，健身房 12 次，自行 2 次，健身房 1 月 21 号停操课。
 * 2 月 10 次，健身房 2 次，自行 8 次，健身房 2 月 27 号恢复操课。
-* 3 月 5 次，健身房 5 次
+* 3 月 14 次，健身房 14 次
 * 4 月
 * 5 月
 * 6 月
@@ -137,7 +140,7 @@
 
 * 1 月 2 张，未达标，总量完成 3%
 * 2 月 0 张，未达标。
-* 3 月
+* 3 月 0 张，未达标。
 * 4 月
 * 5 月
 * 6 月
