指数基金投资指南读书笔记

--- a/BookNote/非技术书籍/指数基金投资指南.md
+++ b/BookNote/非技术书籍/指数基金投资指南.md
@@ -95,9 +95,13 @@
 
 # 摘录
 
-* 
+[指数基金投资指南摘录](https://github.com/ZhangMiao147/android_learning_notes/blob/master/BookNote/非技术书籍/指数基金投资指南摘录.md)
 
 # 感想
 
-　　
+　　学习投资基金的入门书，投资基金要有持有 3 年的心理准备，所以投资基金要近期不用的钱。低估时投入，高估时赎回。
+
+​		需要慢慢的学习理财，但是还是想稳妥一些。
+
+​		前期准备少量的钱投资指数基金，大部分的钱投资货币基金，稳妥一些。
 
