--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -87,7 +87,7 @@
 ```java
 6. 其他
 书籍：《思维导图完整手册》- 完成
-  	 《指数基金投资指南》
+  	 《指数基金投资指南》- 完成
   	 《攻守：可转债投资实用手册》
 ```
 
@@ -98,6 +98,8 @@
 * 2 月 《指数基金投资指南》第 1 章
 
 * 3 月 《指数基金投资指南》第 2- 8 章-阅读完毕
+
+* 4 月 《指数基金投资指南》读书笔记完成
 
   
 
