--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -50,7 +50,7 @@
 * 1 月 第 1-25 视频学习，进度完成 10.68%。
 * 2 月 第 26-91 视频学习，进度完成 38.98%。
 * 3 月第 92-110 视频学习，进度完成 47%。
-* 4 月第 111 - 113 视频学习，进度完成
+* 4 月第 111 - 120 视频学习，进度完成
 
 ## 1.4. Android
 
@@ -80,7 +80,7 @@
 
 * 3 月 《代码整洁之道》 第 12-14 章完成
 * 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
-* 4 月 《重构：改善既有代码的设计》第 3-4 章阅读
+* 4 月 《重构：改善既有代码的设计》第 3-6 章完成，第 6 -7 章阅读，第 2 章读书笔记完成
 
 ## 1.6. 其他
 
