重构第7章读书笔记

--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -80,7 +80,7 @@
 
 * 3 月 《代码整洁之道》 第 12-14 章完成
 * 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
-* 4 月 《重构：改善既有代码的设计》第 3-6 章完成，第 6 -7 章阅读，第 2 章读书笔记完成
+* 4 月 《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
 
 ## 1.6. 其他
 
