--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -50,7 +50,8 @@
 * 1 月 第 1-25 视频学习，进度完成 10.68%。
 * 2 月 第 26-91 视频学习，进度完成 38.98%。
 * 3 月第 92-110 视频学习，进度完成 47%。
-* 4 月第 111 - 120 视频学习，进度完成
+* 4 月第 111-120 视频学习，进度完成 51%。
+* 5 月第 121-133 视频学习，进度完成 56%。
 
 ## 1.4. Android
 
@@ -81,6 +82,7 @@
 * 3 月 《代码整洁之道》 第 12-14 章完成
 * 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
 * 4 月 《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
+* 5 月 《重构：改善既有代码的设计》第 9-10 章阅读
 
 ## 1.6. 其他
 
@@ -121,9 +123,9 @@
 
 * 1 月 14 次，健身房 12 次，自行 2 次，健身房 1 月 21 号停操课。
 * 2 月 10 次，健身房 2 次，自行 8 次，健身房 2 月 27 号恢复操课。
-* 3 月 14 次，健身房 14 次
-* 4 月 1 次，
-* 5 月
+* 3 月 14 次，健身房 14 次。
+* 4 月 10 次，健身房 10 次。
+* 5 月 7 次，健身房 7 次。
 * 6 月
 * 7 月
 * 8 月
@@ -144,8 +146,8 @@
 * 1 月 2 张，未达标，总量完成 3%
 * 2 月 0 张，未达标。
 * 3 月 0 张，未达标。
-* 4 月
-* 5 月
+* 4 月 0 张，未达标。
+* 5 月 0 张，
 * 6 月
 * 7 月
 * 8 月
