框架特殊性设计笔记

--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -51,7 +51,7 @@
 * 2 月 第 26-91 视频学习，进度完成 38.98%。
 * 3 月第 92-110 视频学习，进度完成 47%。
 * 4 月第 111-120 视频学习，进度完成 51%。
-* 5 月第 121-139 视频学习，进度完成 59%。
+* 5 月第 121-134 视频学习，进度完成 61%。
 
 ## 1.4. Android
 
@@ -82,7 +82,8 @@
 * 3 月 《代码整洁之道》 第 12-14 章完成
 * 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
 * 4 月 《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
-* 5 月 《重构：改善既有代码的设计》第 9-12 章阅读
+* 5 月 《重构：改善既有代码的设计》第 9-12 章阅读，第 8 章读书笔记完成
+* 
 
 ## 1.6. 其他
 
